# CellularAutomata3DVulkan

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: fragment.frag  fragment.spv  vertex.spv  vertex.vert
cmake/: global_settings.cmake
code/: CMakeLists.txt  main.cpp
code/inc/: App.h  Box.h  Cell.h  ImguiWrapper.h  Settings.h  State.h  Swapchain.h  Types.h  Utils.h  VulkanUtils.h  Window.h
code/src/: App.cpp  Box.cpp  Cell.cpp  ImguiWrapper.cpp  State.cpp  Swapchain.cpp  VulkanUtils.cpp  Window.cpp
